[package]
name = "pomodoro-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple Pomodoro timer with a terminal user interface."
homepage = "https://github.com/xamcost/pomodoro"
repository = "https://github.com/xamcost/pomodoro"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
notify-rust = "4.11.7"
ratatui = "0.29.0"
tui-big-text = "0.7.1"
